@@ -1,3 +1,11 @@
+2006-08-21  Cecilia Gonzalez  <m3gumi@gmail.com>
+	* bonobo/bonobo-ui-sync-menu.c 
+	(impl_bonobo_ui_sync_menu_state): Check if a accelerator closure
+	exists already and avoid multiple addings of the same accelerator.
+	(widget_has_accel): New function that checks if a widget has an
+	specific accelerator. This fixes memory growth when switching
+	components in Evolution.
+
 2006-08-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* tools/browser/window.c: (verb_HelpAbout):
